タイトルの変更

--- a/mahjong.html
+++ b/mahjong.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>麻雀</title>
+<title>2人打ち麻雀</title>
 </head>
 <body background="back.jpg">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
